Nova estrutura e comandos CLI
