# bin/templates/model.js
@@ -1,24 +1,44 @@
 const Utils = require('../utils/utils');
-const pluralize = require('pluralize');
 
 /**
  * Template data model response
  */
-module.exports = {
-    get: function (resource) {
+module.exports = resource => {
+    return `'use strict';
+const mongoose = require('../../../infra/database');
+const { BcryptUtil } = require('../../common/utils');
+// or add your collection name here
+// const MongoConst = require('../constants/mongo_const');
 
-        return `'use strict';
-const utils = require('../utils');
-// Objeto de response da api ${pluralize.plural(Utils.toFirstCase(resource))}
-module.exports = {
-    model: (entity) => {
-        return {
-            //set properties
-            data: entity.FieldName
-        }
-    }
-};`;
-    }
+const ${Utils.toFirstCase(resource)}Schema = new mongoose.Schema({
+    name: {
+        type: String,
+        require: true
+    },
+    email: {
+        type: String,
+        unique: true,
+        require: true,
+        lowercase: true
+    },
+    password: {
+        type: String,
+        unique: true,
+        require: true,
+        select: false
+    } 
+});
+
+//criptografa o password ao salva o usuário
+UsuarioSchema.pre('save', async function (next) {
+    const hash = await BcryptUtil.hash(this.password);
+    this.password = hash;
+    next();
+})
+
+const ${Utils.toFirstCase(resource)} = mongoose.model('${resource.toLowerCase()}', UsuarioSchema);
+
+module.exports = ${Utils.toFirstCase(resource)};`;
 }
 
 
