# bin/templates/openapi.yaml
@@ -1,326 +1,275 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
-  description: API Description
-  version: 1.0.0-oas3
-  title: API Title
+  title: API Description
+  description: API NodeJS
+  version: 1.0.0
+  termsOfService: http://localhost
   contact:
+    name: Your Name
     email: email@domain.com
+  license:
+    name: "ISC"
+    url: http://localhost
+servers:
+  - url: http://localhost:7003/api/v1
+    description: Development Server
+  # - url: http://dev-apilocavia.infosistemas.com.br:7003/api/v1
+  #   description: Development Server
+#     variables:
+#       port:
+#         enum:
+#           - "7000"
+#         default: "7000"
+#       basePath:
+#         default: api/v1
+#   - url: http://localhost:{port}/{basePath}
+#     description: Production Server
+#     variables:
+#       port:
+#         enum:
+#           - "8000"
+#         default: "8000"
+#       basePath:
+#         default: api/v1
+  
+# ordem alfabetica A-Z
 tags:
+  - name: Auth
+    description: "Token de acesso"
   - name: Usuarios
+    description: "Dados de Usuários"
+
 paths:
-  /usuarios/login:
-    x-swagger-router-controller: usuario.controller
+ # Auth #
+  /auth/access-token:
     post:
       tags:
-        - Usuarios
-      summary: Realiza o login do usuário
-      description: Recupera a token para acesso aos recursos da API
-      operationId: postLogin
+        - Auth
+      summary: Obtem um token de acesso
+      operationId: accessToken
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/loginRequest'
-        description: Objeto JSON com os dados do login
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
         required: true
       responses:
-        '200':
-          description: Retorna o token de acesso
+        200:
+          description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/loginResponse'
-        default:
-          description: Erro
+                $ref: '#/components/schemas/authResponse'
+        400:
+          $ref: '#/components/responses/badRequestResponse' 
+        401:
+          $ref: '#/components/responses/unauthorizedResponse' 
+        500:
+          $ref: '#/components/responses/internalServerErrorResponse' 
+
+  /auth/refresh-token:
+    post:
+      tags:
+        - Auth
+      summary: Atualiza o token de acesso
+      operationId: refreshToken
+      parameters:
+        - in: header
+          name: X-API-Key
+          schema:
+            type: string
+          allowReserved: true
+      responses:
+        200:
+          description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/errorResponse'
-  /usuarios:
-    x-swagger-router-controller: usuario.controller
+                $ref: '#/components/schemas/authResponse'
+        400:
+          $ref: '#/components/responses/badRequestResponse' 
+        401:
+          $ref: '#/components/responses/unauthorizedResponse' 
+        500:
+          $ref: '#/components/responses/internalServerErrorResponse' 
+
+ # Usuarios Routes #
+  /usuarios/{id}:
     get:
       tags:
         - Usuarios
       summary: Recupera dados de usuários
-      description: Recupera dados de usuários
-      operationId: getUsuarios
+      operationId: getUsuario
+      security:
+        - ApiKeyAuth: []
       parameters:
-        - in: query
-          name: nome
+        - in: path
+          name: id
+          required: true
           schema:
             type: string
-        - in: query
-          name: cpf
-          schema:
-            type: string
-        - in: query
-          name: email
-          schema:
-            type: string
-        - in: query
-          name: numeroPagina
-          schema:
-            type: integer
-            format: int32
-        - in: query
-          name: linhasPagina
-          schema:
-            type: integer
-            format: int32
       responses:
-        '200':
-          description: success
+        200:
+          description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getUsuariosResponse'
-        '403':
-          description: Acesso Negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorResponse'
-    post:
-      tags:
-        - Usuarios
-      summary: Cadastro de usuário
-      description: Cadastro de usuário
-      operationId: postUsuario
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/postUsuarioRequest'
-        required: true
-      responses:
-        '201':
-          description: created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/postResponse'
-        '403':
-          description: Acesso Negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorResponse'
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorUsuarioPostResponse'
-  '/usuarios/{id}':
-    x-swagger-router-controller: usuario.controller
+                $ref: "#/components/schemas/usuarioResponse"
+        400:
+          $ref: '#/components/responses/badRequestResponse' 
+        401:
+          $ref: '#/components/responses/unauthorizedResponse' 
+        500:
+          $ref: '#/components/responses/internalServerErrorResponse' 
+  /usuarios:
     get:
       tags:
         - Usuarios
-      summary: Recupera dados do usuário
-      description: Recupera dados do usuário
-      operationId: getUsuario
+      summary: Recupera dados de usuários
+      operationId: getUsuarios
+      security:
+        - ApiKeyAuth: []
       parameters:
-        - in: path
-          name: id
+        - in: query
+          name: nome
           required: true
+          allowReserved: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
-        '200':
-          description: success
+        200:
+          description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getUsuarioResponse'
-        '403':
-          description: Acesso Negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorResponse'
-    put:
+                type: array
+                items:
+                  $ref: "#/components/schemas/usuarioResponse"
+        400:
+          $ref: '#/components/responses/badRequestResponse' 
+        401:
+          $ref: '#/components/responses/unauthorizedResponse' 
+        500:
+          $ref: '#/components/responses/internalServerErrorResponse' 
+    post:
       tags:
         - Usuarios
-      summary: Atualiza os dados do usuário
-      description: Atualiza os dados do usuário
-      operationId: putUsuario
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: integer
-            format: int64
+      summary: Registra um usuário no sistema
+      operationId: postUsuario
+      security:
+        - ApiKeyAuth: []
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/putUsuarioRequest'
-        description: Objeto JSON com os dados do usuário
+              type: object
+              properties:
+                nomeUsuario:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+                  description: "CryptoJS: mode.CBC pad.Pkcs7"
         required: true
       responses:
-        '200':
-          description: success
+        201:
+          description: CREATED
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/putResponse'
-        '403':
-          description: Acesso Negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorResponse'
-    patch:
-      tags:
-        - Usuarios
-      summary: Altera os dados do usuário
-      description: Altera os dados do usuário
-      operationId: patchUsuario
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/patchUsuarioRequest'
-        required: true
-      responses:
-        '200':
-          description: success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/patchResponse'
-        '403':
-          description: Acesso Negado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/errorResponse'
-servers:
-  - url: 'http://localhost:8041/api/v1'
+                $ref: "#/components/schemas/postResponse"
+        400:
+          $ref: '#/components/responses/badRequestResponse' 
+        401:
+          $ref: '#/components/responses/unauthorizedResponse' 
+        500:
+          $ref: '#/components/responses/internalServerErrorResponse' 
 components:
+  responses:
+    badRequestResponse:      
+      description: BAD_REQUEST
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/errorResponse"
+    unauthorizedResponse:      
+      description: UNAUTHORIZED
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/errorResponse"
+    internalServerErrorResponse:
+        description: INTERNAL_SERVER_ERROR
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/errorResponse"
+  securitySchemes:
+    ApiKeyAuth:
+      type: apiKey
+      in: header
+      name: X-API-Key
   schemas:
-    loginRequest:
-      type: object
-      properties:
-        username:
-          type: string
-          description: Nome de usuário ou email
-        password:
-          type: string
-    postUsuarioRequest:
-      type: object
-      properties:
-        nome:
-          type: string
-        email:
-          type: string
-        senha:
-          type: string
-    putUsuarioRequest:
-      type: object
-      properties:
-        nome:
-          type: string
-    patchUsuarioRequest:
-      type: object
-      properties:
-        senhaAtual:
-          type: string
-        novaSenha:
-          type: string
     errorResponse:
-      type: object
-      properties:
-        message:
-          type: string
-    putResponse:
       type: object
       properties:
         data:
           type: object
           properties:
-            rowsAffected:
+            code:
               type: integer
-              format: int64
             message:
               type: string
+            status:
+              type: string
+    apiResponse:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            message:
+              type: string
+    authResponse:              
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            token:
+              type: string
+            issuedAt:
+              type: integer
+            expiresAt:
+              type: integer                  
+    usuarioResponse:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            id:
+              type: number
+            nome:
+              type: string
+            email:
+              type: string
+            inseridoEm:
+              type: string
+              description: Date
     postResponse:
       type: object
       properties:
         data:
           type: object
           properties:
-            insertId:
-              type: integer
-              format: int64
+            id:
+              type: string
             message:
               type: string
-    patchResponse:
-      type: object
-      properties:
-        data:
-          type: object
-          properties:
-            rowsAffected:
-              type: integer
-              format: int64
-            message:
-              type: string
-    deleteResponse:
-      type: object
-      properties:
-        data:
-          type: object
-          properties:
-            insertId:
-              type: integer
-              format: int64
-    loginResponse:
-      properties:
-        token:
-          type: string
-          description: base64-encoded
-    getUsuariosResponse:
-      type: object
-      properties:
-        data:
-          type: array
-          items:
-            $ref: '#/components/schemas/usuarioResponse'
-    getUsuarioResponse:
-      type: object
-      properties:
-        data:
-          $ref: '#/components/schemas/usuarioResponse'
-    usuarioResponse:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        nome:
-          type: string
-        dataNascimento:
-          type: integer
-          format: int64
-          description: Valor timestamp
-        email:
-          type: string
-    errorUsuarioPostResponse:
-      type: object
-      properties:
-        message:
-          type: string
-          enum:
-            - CPF_CADASTRADO
-            - EMAIL_CADASTRADO
-            - CELULAR_CADASTRADO
